Bug 363434 - stuck on appstreamurl resolve
Summary: stuck on appstreamurl resolve
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.6.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-23 14:51 UTC by Harald Sitter
Modified: 2016-05-24 15:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-05-23 14:51:00 UTC
When an appstreamurl cannot be resolved, discover shows the loading page forever and ever and ever.

This most notably happens if an app doesn't actually exist such as org.kde.kate on ubuntu

Reproducible: Always

Steps to Reproduce:
1. appstream://org.kde.kate.desktop
2. discover loading forever

Actual Results:  
if an application cannot be resolved, that should be detected and raise suitable error information for the user.
Comment 1 Aleix Pol 2016-05-24 15:41:00 UTC
Git commit 0cae97133cdc7eb666cb059e69eba12adc8176f6 by Aleix Pol.
Committed on 24/05/2016 at 15:38.
Pushed by apol into branch 'master'.

Show a message if the opened resource wasn't found and get to the initial view

M  +7    -0    discover/DiscoverMainWindow.cpp
M  +1    -2    discover/DiscoverMainWindow.h
M  +1    -0    discover/autotests/CMakeLists.txt
A  +10   -0    discover/autotests/missingResource.qml     [License: UNKNOWN]  *
M  +15   -0    discover/qml/Main.qml

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/discover/0cae97133cdc7eb666cb059e69eba12adc8176f6