Show a message if the opened resource wasn't found and get to the initial view

BUG: 363434